# python-rakuten-csv-to-shopify-csv

./: .gitignore  CLAUDE.md  README.md  analyze_metafields.py  extract_skus.py  merge_products.py  migration-planning.md  rakuten-header.txt  shopify-header.txt  shopify_constants.py  todo.md
analysis/: check_mismatched_items.py
api/: .env.example  PROGRESS.md  README.md  USAGE_GUIDE.md  pyproject.toml  setup.py
api-operations/: README.md
api-operations/node/: package-lock.json  package.json
api-operations/node/queries/: productCreate.js
api-operations/node/src/: 01_remove_ss_images.js  02_fix_html_tables.js  04_insert_images.js  06_update_products_description.js  10_update_product_barcodes.js  11_update_product_skus.js  13_batch_migrate_size_metafields.js  13_scan_variant_size_metafields.js  14_update_product_tax_metafield.js  graphql_test_queries.md  quick_csv_check.py  test_connection.js
api-operations/python/src/: 01_analyze_ss_images.py  04_audit_images.notes.txt  09_preprocess_rakuten_catalog.py  (+14 more)
api/node/: README.md  package.json  pnpm-lock.yaml  update_log.txt
api/node/queries/: productCreate.js
api/node/src/: 00_import_products.js  01_remove_ss_images.js  04_insert_images.js  04_insert_images_alt_matching.js  06_update_products_description.js  config.js  shopify-client.js
api/scripts/: 00_import_to_test.py  01_analyze_ss_images.py  01_remove_ss_images.py  02_analyze_html_tables.py  02_fix_html_tables.py  03_analyze_rakuten.py  03_clean_rakuten.py  04_audit_images.notes.txt  04_audit_images.py  check_variant_images.py  fix_html_tables.py  test_single_upload.py
api/scripts/utils/: json_output.py
api/shared/: ss_images_to_remove.json
api/src/shopify_manager/: __init__.py  client.py  logger.py
app/: app.py  groupByCatalog.js  readme.md  splitter.py  todo.md  ui.py  utils.py
constants/: rakuten_constants.py
csv-conversion/: README.md
csv-conversion/src/: 8_get_empty_type.py  download_images.py  main.py  merge_category_to_type.py  problematic_images.py
csv_utils/: convert_rakuten_to_shopify.py  merge_rakuten_files.py  remove_body_html.py  remove_content_columns.py  remove_description_columns.py  split_csv_by_size.py
docs/: TEST_CASES.md  todo.md
final/: 0_readme.md  3_rewrites_urls.py  4_sort_set.py  7_reformat_csv.py  create_preview.py  download_images.py  extract_image_url.py  inspect_collection.py  inspect_rakuten.py  inspect_shopify.py  main.py  make-unique.py  problematic_images.py  readme.md  split_by_rows.py  utility_count_handle.py  utility_extract_values.py
final/data/: mapping_meta.json
final/reference/: processAndGroup.js  removeSs.js
manual/: README.md  rakuten-header.txt
manual/analysis/: analyze_attributes.py  log_unique_sku.py
manual/app/: grouper.py  requirements.txt  ui.py
manual/final/: 10_get_with_type.py  1_extract_urls.py  2_download_images.py  3_rewrites_urls.py  5_extract_problem_rows.py  6_gold_image_correction.py  9_update_types.py  get_type_list.py  image_utils.py  inspect_rakuten.py  inspect_shopify.py  split_by_rows.py  utility_find_attributes.py
rakuten-to-shopify/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  REQUIREMENTS.md  UV_QUICKSTART.md  config.json  convert.py  create_final_corrected_output.py  debug_mapping.py  debug_step05.py  debug_step4_assignment.py  debug_url_replacement.py  download_html_images.py  fix_mapping.py  manual_save_step4.py  manual_test_step4.py  pyproject.toml  requirements.txt  test_brand_separator.py  test_complete_size_fix.py  test_comprehensive_separators.py  test_mapping_fix.py  test_replacement.py  test_size_filtering.py
rakuten-to-shopify/docs/: TROUBLESHOOTING.md
rakuten-to-shopify/extras/: README.md
rakuten-to-shopify/scripts/: run_conversion.sh
rakuten-to-shopify/src/rakuten_to_shopify/: __init__.py  main.py  simple_summary.py  transformation_summary.py
rakuten-to-shopify/src/rakuten_to_shopify/pipeline/: __init__.py  pipeline_config.py  pipeline_runner.py
rakuten-to-shopify/src/rakuten_to_shopify/pipeline/steps/: __init__.py  step_00_load_and_validate.py  step_01_initial_cleaning.py  step_01_initial_cleaning_backup.py  step_02_sku_processing.py  step_03_html_processing.py  step_04_image_processing.py  step_05_metafield_mapping.py  step_06_image_restructuring.py  step_07_tax_mapping.py  step_07_type_assignment.py  step_08_data_cleanup.py  step_08_variant_grouping.py  step_09_attribute_processing.py  step_09_variant_image_separation.py  step_10_description_finalization.py  step_11_csv_formatting.py  step_12_header_completion.py  step_13_quality_validation.py  step_14_export_generation.py  step_15_tax_classification.py
rakuten-to-shopify/step_output/: step_03_cleaned_image_urls.json
rakuten-to-shopify/steps/: 01_clean_data.py  run_step.sh  step_runner.py
(+44 files in other folders)
